# deepshell

./: .gitignore  README.md  fullscreen_window.py  main_window.py  public_types.py  pyproject.toml  server_check.py  shadow_window.py  singleton_app.py  tempCodeRunnerFile.py  tmp.py
ai_audio/: audio_task.py  audio_tool.py
ai_table/: __init__.py  gen_report.py  gen_table.py  intro_ui.py  table_task.py
audio_transcription/: intro_ui.py  processor.py  transcriptionTask.py
chat/: assistant.py  chat_task.py  intro_page.py  memory_compressor.py  message_helpers.py  model_manager.py  preprompt_task.py  web_search_manager.py
config/: .env.example  README.md  app.yaml  assistant.yaml  config_manager.py  logging_config.ini  model.yaml  rag.yaml
database/: db_manager.py
docs/: websearch_integration.md
draw/: drawing_task.py
logs/: app_debug.log.1  app_info.log.1
meeting/: intro_ui.py  meeting_box.py  meeting_btn_widget.py  meeting_task.py
mind_map/: intro_ui.py  map.py  map2.py  map_task.py
ocr/: image_processor.py  intro_ui.py  ocr_task.py  ocr_test.py  ocr_text.py  ocr_yolo_detector.py
ppt/: intro_ui.py
rag/: __init__.py  rag_manager.py
speech/: speech_task.py  voice_recognition.py
sys_agent/: agent_controller.py  agent_task.py  experts.json  functions.json  intro_ui.py  pipeline_agent.py  react_agent.py  sys_agent_task.py  sys_func_call.py  tool_router.py  toolkit_sys.py
sys_func/: sys_func_call.py  sys_func_task.py
tests/: test_main_window.py
translation/: intro_ui.py  language_dic.py  select_botton.py  translate_detect.py  translate_task.py
(+82 files in other folders)
